rename majority of symbol references to currency and add currencies component

--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -1,2 +1,7 @@
-<p>portfolio works!</p>
+<h1>Portfolio</h1>
 <app-portfolio-pie-chart [allocations]=allocations></app-portfolio-pie-chart>
+<ul>
+  <li *ngFor="let allocation of this.allocations">
+    {{ allocation.symbol }}
+  </li>
+</ul>
