continue style updates focus on lis

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,4 @@
-<app-quotes></app-quotes>
-<app-portfolio></app-portfolio>
+<div class="app-body">
+  <app-quotes></app-quotes>
+  <app-portfolio></app-portfolio>
+</div>
