restructure exchanges to have a name and selected attirbute

--- a/src/app/exhanges/exhanges.component.html
+++ b/src/app/exhanges/exhanges.component.html
@@ -1,5 +1,7 @@
 <ul>
-  <li *ngFor="let exchange of exchanges">
-    {{ exchange }}
+  <li *ngFor="let exchange of exchanges"
+    [class.exchange-selected]="exchange.selected"
+    [class.exchange-deselected]="!exchange.selected">
+    {{ exchange.name }}
   </li>
 </ul>
