restructure exchanges to have a name and selected attirbute

--- a/src/app/exhanges/exhanges.component.html
+++ b/src/app/exhanges/exhanges.component.html
@@ -1,7 +1,8 @@
 <ul>
   <li *ngFor="let exchange of exchanges"
-    [class.exchange-selected]="exchange.selected"
-    [class.exchange-deselected]="!exchange.selected">
+    [class.exchange-selected]="exchange.isSelected"
+    [class.exchange-deselected]="!exchange.isSelected"
+    (click)="setSelected()">
     {{ exchange.name }}
   </li>
 </ul>
