added output for exchange selection toggle

--- a/src/app/exhanges/exhanges.component.html
+++ b/src/app/exhanges/exhanges.component.html
@@ -2,7 +2,7 @@
   <li *ngFor="let exchange of exchanges; index as i"
     [class.exchange-selected]="exchange.isSelected"
     [class.exchange-deselected]="!exchange.isSelected"
-    (click)="setSelected(i)">
+    (click)="setSelected($event, i)">
     {{ exchange.name }}
   </li>
 </ul>
