--- a/src/app/quotes/quotes.component.html
+++ b/src/app/quotes/quotes.component.html
@@ -1,1 +1,1 @@
-<app-exhanges [exchanges]="exchanges"></app-exhanges>
+<app-exhanges [exchanges]="exchanges" (click)="toggleExhange($event)"></app-exhanges>
