added header and began restructure for currency search

--- a/src/app/exhanges/exhanges.component.html
+++ b/src/app/exhanges/exhanges.component.html
@@ -1,5 +1,6 @@
 <ul>
   <li *ngFor="let exchange of exchanges; index as i"
+    class = "exchange"
     [class.exchange-selected]="exchange.isSelected"
     [class.exchange-deselected]="!exchange.isSelected"
     (click)="setSelected($event, i)">
