--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,10 +1,21 @@
-.app-body {
+.app-body, .app-header {
   padding: 1.5rem;
   background-color: seashell;
   display: flex;
   flex-direction: row;
 }
 
+.app-header {
+  min-height: 4rem;
+  margin-bottom: 0.5rem;
+}
+
 app-quotes {
-  width: 20%;
+  width: 50%;
+  display: flex;
+  flex-direction: row;
+}
+
+app-portfolio {
+  width: 50%;
 }
