--- a/src/app/exhanges/exhanges.component.css
+++ b/src/app/exhanges/exhanges.component.css
@@ -1,7 +1,12 @@
+li {
+  cursor: pointer;
+}
+
 .exchange-selected {
   background-color: rgba(151, 206, 192, 1);
 }
 
 .exchange-deselected {
-  background-color: rgba(151, 206, 192, 0.4);
+  color: rgb(200, 200, 200);
+  background-color: rgba(151, 206, 192, 0.2);
 }
