--- a/src/app/exhanges/exhanges.component.css
+++ b/src/app/exhanges/exhanges.component.css
@@ -19,6 +19,10 @@
   cursor: pointer;
 }
 
+.exchanges-bulk-selector.deselected {
+  cursor: not-allowed;
+}
+
 .selected {
   color: rgb(230, 230, 230);
   background-color: rgb(22, 75, 62);
