restructure exchange/currency data to allow for easier filtering by exchange

--- a/src/app/exhanges/exhanges.component.html
+++ b/src/app/exhanges/exhanges.component.html
@@ -1,8 +1,6 @@
 <div class="exchanges-select">
   <div class="message message-info">
-    Selecting from<br>
-    #### currenies<br>
-    from {{ selectedCount() }} exchanges
+    Selecting from {{ selectedCount() }} exchanges
   </div>
   <div class="exchanges-bulk-selectors">
     <div
