currency filter by exchange for inidividual exchange selection

--- a/src/app/exhanges/exhanges.component.html
+++ b/src/app/exhanges/exhanges.component.html
@@ -1,6 +1,6 @@
 <div class="exchanges-select">
   <div class="message message-info">
-    Selecting from {{ selectedCount() }} exchanges
+    Selecting from <br>{{ selectedCount() }} exchanges
   </div>
   <div class="exchanges-bulk-selectors">
     <div
