added count to currencies search component

--- a/src/app/currencies-search/currencies-search.component.html
+++ b/src/app/currencies-search/currencies-search.component.html
@@ -1,1 +1,4 @@
-<p>currencies-search works!</p>
+<div class="message message-info">
+  {{ filteredCurrenciesCount }} matching<br>
+  currencies
+</div>
