--- a/src/app/quotes/quotes.component.html
+++ b/src/app/quotes/quotes.component.html
@@ -10,6 +10,7 @@
   </app-currencies-search>
   <app-currencies
     [currencies]="filteredCurrencies"
+    [filteredCurrenciesCount]="filteredCurrenciesCount"
     [displayMax]=10>
   </app-currencies>
 </div>
