--- a/src/app/currencies/currencies.component.html
+++ b/src/app/currencies/currencies.component.html
@@ -3,7 +3,7 @@
     <ul>
       <li *ngFor="let currency of currencies; index as i"
         class="currency">
-          Hello!
+          {{ currency.symbol }}
       </li>
     </ul>
   </div>
