--- a/src/app/currencies-search/currencies-search.component.css
+++ b/src/app/currencies-search/currencies-search.component.css
@@ -2,9 +2,10 @@
   background-color: rgb(230, 230, 230);
   color: rgb(22, 75, 62);;
   font-family: 'Lato', sans-serif;
-  font-size: 1rem;
+  font-size: 1.25rem;
   font-weight: 700;
   height: 2.5rem;
+  width: 80%;
   padding: 0.25rem 0.5rem 0.25rem 0.5rem;
   border-color: rgb(22, 75, 62);
   border-radius: 0.35rem;
