--- a/src/app/currencies/currencies.component.css
+++ b/src/app/currencies/currencies.component.css
@@ -1,13 +1,25 @@
 .currency {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
   font-family: 'Lato', sans-serif;
   font-size: 1rem;
   font-weight: 700;
   background-color: rgb(230, 230, 230);
-  color: rgb(22, 75, 62);;
-  padding: 0.25rem 0.5rem 0.25rem 0.5rem;
+  color: rgb(22, 75, 62);
+  min-height: 1.5rem;
+  padding: 0rem 0rem 0rem 0.5rem;
   border-color: rgb(22, 75, 62);
   border: 2px;
-  border-radius: 0.35rem;
+  border-radius: 0.25rem;
   margin: 0.25rem;
+}
+
+.add-button {
+  color: rgb(230, 230, 230);
+  background-color: rgb(22, 75, 62);
+  padding: 0.25rem 0.5rem 0.25rem 0.5rem;
+  border-radius: 0rem 0.25rem 0.25rem 0rem;
   cursor: pointer;
 }
