add index and inPortfolio properties to currencies list

--- a/src/app/currencies/currencies.component.html
+++ b/src/app/currencies/currencies.component.html
@@ -4,7 +4,7 @@
       <li *ngFor="let currency of currencies; index as i"
         class="currency"
       >
-        {{ currency.symbol }}
+        {{ currency.description }}
         <div
           class="add-button"
           (click)="addToPortfolio($event, i)"
