add conditional display of add to portfolio button on currency list

--- a/src/app/currencies/currencies.component.html
+++ b/src/app/currencies/currencies.component.html
@@ -5,7 +5,7 @@
         class="currency"
       >
         {{ currency.description }}
-        <div
+        <div *ngIf="!inPortfolio(i)"
           class="add-button"
           (click)="addToPortfolio($event, i)"
         >
