--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -9,3 +9,10 @@
   min-height: 4rem;
   margin-bottom: 0.5rem;
 }
+
+app-quotes {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
