--- a/src/app/quotes/quotes.component.css
+++ b/src/app/quotes/quotes.component.css
@@ -1,3 +1,29 @@
-.currenciesSelection {
-  width: 60%;
+app-exchanges {
+  border: 1px solid rgb(50, 50, 50);
+  border-radius: 0.25rem;
+  width: 25%;
+}
+
+.currencies-selection {
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+  width: 35%;
+}
+
+app-currencies-search {
+  color: rgb(50, 50, 50);
+  border-radius: 0.25rem;
+}
+
+app-currencies {
+  color: rgb(50, 50, 50);
+}
+
+app-portfolio {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  width: 40%;
+  padding: 1rem 0rem 1rem 1rem;
 }
