add sorting to portfolio list

--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -21,7 +21,7 @@
     [class.odd]="isOdd"
   >
     <div>
-      {{ allocation.symbol }}
+      {{ allocation.description }}
     </div>
     <div>
       <input
