--- a/src/app/portfolio/portfolio.component.css
+++ b/src/app/portfolio/portfolio.component.css
@@ -2,7 +2,7 @@ app-portfolio-pie-chart {
   background-color: rgb(250, 250, 250);
   border: 1px solid rgb(50, 50, 50);
   border-radius: 0.35rem;
-  min-height: 20rem;
+  height: 50%;
   padding: 1rem;
 }
 
