--- a/src/app/quotes/quotes.component.html
+++ b/src/app/quotes/quotes.component.html
@@ -22,5 +22,6 @@
 </div>
 <app-portfolio
   [allocations]="portfolioAllocations"
+  (removeCurrencyFromPortfolio)="removeCurrencyFromPortfolio($event)"
 >
 </app-portfolio>
