--- a/src/app/portfolio/portfolio.component.css
+++ b/src/app/portfolio/portfolio.component.css
@@ -18,7 +18,6 @@ app-portfolio-pie-chart {
   padding: 0.25rem 1rem 0.25rem 1rem;
   border-radius: 0.25rem;
   margin: 0rem 1.5rem 0rem 1.5rem;
-  cursor: pointer;
   color: rgb(230, 230, 230);
   background-color: rgb(22, 75, 62);
 }
@@ -34,4 +33,10 @@ app-portfolio-pie-chart {
 .odd {
   background-color: rgb(230, 230, 230);
   color: rgb(22, 75, 62);
+}
+
+.close-button {
+  font-weight: 300;
+  font-style: italic;
+  cursor: pointer;
 }
