--- a/src/app/portfolio/portfolio.component.css
+++ b/src/app/portfolio/portfolio.component.css
@@ -1,9 +1,15 @@
 app-portfolio-pie-chart {
-  background-color: rgb(250, 250, 250);
+  background-color: white;
   border: 1px solid rgb(50, 50, 50);
   border-radius: 0.35rem;
-  height: 50%;
+  height: 65%;
   padding: 1rem;
+  align-items: center;
+  margin-bottom: 0.5rem;
+}
+
+plotly-plot {
+  width: 100%;
 }
 
 .portfolio-allocation {
@@ -15,7 +21,7 @@ app-portfolio-pie-chart {
   font-size: 1rem;
   font-weight: 700;
   min-height: 1.5rem;
-  padding: 0.25rem 1rem 0.25rem 1rem;
+  padding: 0.25rem 0.5rem 0.25rem 0.5rem;
   border-radius: 0.25rem;
   margin: 0rem 1.5rem 0rem 1.5rem;
   color: rgb(230, 230, 230);
@@ -35,8 +41,13 @@ app-portfolio-pie-chart {
   color: rgb(22, 75, 62);
 }
 
+.zero-allocation {
+  color: red;
+}
+
 .close-button {
-  font-weight: 300;
-  font-style: italic;
+  font-weight: 700;
+  padding-top: -0.25rem;
+  padding-bottom: 0.25rem;
   cursor: pointer;
 }
