--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -1,10 +1,29 @@
-<app-portfolio-pie-chart [allocations]="allocations"></app-portfolio-pie-chart>
+<!-- <app-portfolio-pie-chart
+  [currencyAllocations]="getCurrencyAllocations()"
+  [currencyNames]="getCurrencyNames()"
+>
+</app-portfolio-pie-chart> -->
+<plotly-plot
+  [data]="[{
+    values: currencyAllocations,
+    labels: currencyNames,
+    type: 'pie'
+  }]"
+  [layout]="graphLayout"
+>
+</plotly-plot>
+
+<!-- <app-test-plot
+  [currencyAllocations]="getCurrencyAllocations()"
+  [currencyNames]="getCurrencyNames()"
+>
+</app-test-plot> -->
 <ul>
   <div *ngIf="incompleteAllocation(); then incomplete else nonIncomplete"></div>
   <ng-template #incomplete>
     <div class="message message-info">
       Allocations must total 100%<br>
-      Current allocations total {{ totalAllocation() }}%
+      {{ 100 - totalAllocation() }}% of portfolio unallocated
     </div>
   </ng-template>
   <ng-template #nonIncomplete>
@@ -13,15 +32,12 @@
       <br>
     </div>
   </ng-template>
-  <div *ngIf="zeroAllocation()" class="message message-info">
-    No allocations can be 0%
-  </div>
   <li *ngFor="let allocation of this.allocations; odd as isOdd; index as i;"
     class="portfolio-allocation"
     [class.odd]="isOdd"
   >
     <div class="close-button" (click)="removeCurrency($event, i)">
-      X
+      x
     </div>
     <div>
       {{ allocation.description }}
@@ -31,9 +47,11 @@
         type="number"
         class="allocation-percentage"
         [class.odd]="isOdd"
+        [class.zero-allocation]="isZeroAllocation(i)"
         min="0"
         max="100"
         [(ngModel)]="allocation.allocation"
+        (change)="updatePercent()"
       >
       %
     </div>
