add currency count to exchange selector

--- a/src/app/exhanges/exhanges.component.html
+++ b/src/app/exhanges/exhanges.component.html
@@ -35,7 +35,7 @@
       [class.selected]="exchange.isSelected"
       [class.deselected]="!exchange.isSelected"
       (click)="setSelected($event, i)">
-        {{ exchange.name }}
+        {{ exchange.name }} ({{ exchange.filteredCurrenyCount }})
     </li>
   </ul>
 </div>
